# syncy

./: .gitignore  Cargo.toml  TODO.md
src/: cli.rs  event.rs  git_tree.rs  github_provider.rs  lib.rs  main.rs  provider.rs  test_dsl.yml
src/cli/: common.rs  mod.rs  parser.rs  reader.rs
src/fixtures/: content.rs  globs.rs  mod.rs  workdir_path.rs
src/mocks/: github.rs  mod.rs
tests/integration/: create_source_tree.rs  generate_events.rs  main.rs
tests/integration/mocks/: github.rs
