[package]
name = "syncy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
octocrab = "0.15"
base64 = "0.13.0"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
async-recursion = "1.0.0"
regex = "1.5"
glob = "0.3.0"
async-trait = "0.1.53"
[dev-dependencies]
indoc = "1.0"
wiremock = "0.5"